--- a/app/src/main/res/layout/activity_introductory.xml
+++ b/app/src/main/res/layout/activity_introductory.xml
@@ -9,9 +9,9 @@
     <ImageView
         android:id="@+id/img"
         android:elevation="2dp"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="900dp"
-        android:src="@drawable/bg"
+        android:src="@drawable/bg360mejorrmbg"
         app:layout_constraintVertical_bias="0"
         android:scaleType="centerCrop"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -24,7 +24,7 @@
         android:elevation="2dp"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:src="@drawable/inverse_logo"
+        android:src="@drawable/logo360"
         app:layout_constraintVertical_bias=".1"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -35,8 +35,9 @@
         android:id="@+id/app_name"
         android:elevation="2dp"
         android:layout_width="300dp"
-        android:layout_height="wrap_content"
-        android:src="@drawable/white_app_name"
+        android:layout_height="100dp"
+        android:src="@drawable/crossfitrmbg"
+        android:layout_marginTop="25dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -49,7 +50,8 @@
         app:lottie_autoPlay="true"
         android:layout_width="wrap_content"
         android:layout_height="200dp"
-        app:lottie_rawRes="@raw/splash"
+        app:lottie_rawRes="@raw/heavy"
+        android:layout_marginTop="25dp"
         app:layout_constraintVertical_bias="0"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
