--- a/app/src/main/res/layout/fragment_on_boarding3.xml
+++ b/app/src/main/res/layout/fragment_on_boarding3.xml
@@ -22,7 +22,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="25dp"
-        android:text="Sizzling Bites"
+        android:text="BOX 360"
         android:textColor="@color/black"
         android:textSize="16sp"
         android:textStyle="bold"
@@ -53,7 +53,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="36dp"
         android:fontFamily="sans-serif-light"
-        android:text="Fresh"
+        android:text="Fuerte"
         android:textSize="42sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -67,7 +67,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="sans-serif-condensed"
-        android:text="Everything"
+        android:text="Imparable"
         android:textColor="@color/black"
         android:textSize="56sp"
         android:textStyle="bold"
@@ -83,7 +83,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="5dp"
-        android:text="Everything you will experience will be absolutely fresh"
+        android:text="El lugar donde experimentarás el entrenamiento de verdad"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
